[package]
name = "light-anchor-expand"
version = "0.28.0"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
repository = "https://github.com/coral-xyz/anchor"
license = "Apache-2.0"
description = "Utility library for calling cargo-expand"
rust-version = "1.60"
edition = "2021"

[dependencies]
anyhow = "1"
cargo_toml = "0.13.0"
chrono = "0.4.19"
heck = "0.4.0"
serde_json = "1"
